syntax = "proto3";

option java_multiple_files = true;
option java_package = "external.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  int64 userUid = 1;
}

message GetUserResponse {
  int64 userUid = 1;
  string name = 2;
  string email = 3;
  string userType = 4;
}
